Bug 448238 - Menu links are not reported on the status bar as hyperlinks
Summary: Menu links are not reported on the status bar as hyperlinks
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Juraj
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-11 00:02 UTC by redtide
Modified: 2025-01-15 20:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description redtide 2022-01-11 00:02:31 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***
When I select a menu item from the menu bar or from the hystory by clicking on the "next/previous" buttons on the toolbar, at least on FireFox, the link is shown on the status bar like any other webpage link.
This doesn't happens in Falkon. I tried to search on the preferences but I can't find the setting if there.

STEPS TO REPRODUCE
1. Enable both statusbar and menubar
2. Left click on web history menu or right click on the next/previous navigation buttons
3. Hover menu items, no link on the status bar

OBSERVED RESULT
See summary.

EXPECTED RESULT
See summary.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Archlinux with LXQt 1.0.0, Openbox WM
(available in About System)
KDE Plasma Version:
KDE Frameworks Version: 
Qt Version: 5.15.2

ADDITIONAL INFORMATION
-
Comment 1 Bug Janitor Service 2024-12-12 23:55:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/falkon/-/merge_requests/101
Comment 2 Juraj 2025-01-15 20:04:13 UTC
Git commit 0f7c7ba6d2afd578f94593cf697a0d43d36f0f51 by Juraj Oravec.
Committed on 15/01/2025 at 19:57.
Pushed by jurajo into branch 'master'.

Show history & bookmark url in menu on mouse hover

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +7    -0    src/lib/bookmarks/bookmarksmenu.cpp
M  +1    -0    src/lib/bookmarks/bookmarksmenu.h
M  +11   -1    src/lib/bookmarks/bookmarkstools.cpp
M  +25   -3    src/lib/history/historymenu.cpp
M  +2    -0    src/lib/history/historymenu.h
M  +13   -2    src/lib/navigation/navigationbar.cpp
M  +33   -0    src/lib/sidebar/bookmarkssidebar.cpp
M  +3    -0    src/lib/sidebar/bookmarkssidebar.h
M  +19   -0    src/lib/sidebar/historysidebar.cpp
M  +3    -0    src/lib/sidebar/historysidebar.h

https://invent.kde.org/network/falkon/-/commit/0f7c7ba6d2afd578f94593cf697a0d43d36f0f51