Show history & bookmark url in menu on mouse hover

BUG: 448238

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>